# msl

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  NEXTRA_STYLING.md  README.md  SETUP_STATUS.md  debug_registry_centers.rs  debug_test.rs  seeds_stage1.csv  test_debug.py  test_lattice_algorithms.rs
.githooks/: pre-commit
.github/workflows/: deploy-website.yml
archive/web_components_full/: LatticeBuilder2D.tsx  MoireBuilder2D.tsx  MoireBuilder2D_visx.tsx  WignerSeitzCell2D.tsx
python-example/: README.md  example.py  lattice_visualization.ipynb  moire_band_diagram.ipynb  moire_basics.ipynb  photonic_band_diagram.ipynb
research/: .gitignore  environment.yml
research/animations/: README.md  twisted_triangular_animation.py
research/band_diagram_scan/: README.md  pyproject.toml
research/band_diagram_scan/config/: scan_square_hex_eps_r_v1.yml  scan_tiny_debug.yml
research/band_diagram_scan/env/: environment.yml
research/band_diagram_scan/notebooks/: README.md  data_availability.ipynb
research/band_diagram_scan/scripts/: inspect_scan.py  run_scan.py
research/band_diagram_scan/src/bandlib/: __init__.py  axes.py  cli.py  config.py  mpb_runner.py  storage.py
research/band_diagram_scan/src/bandlib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
research/band_diagram_scan/tests/: test_smoke.py
research/envelope_approximation/: README.md  phase0_lattice_setup.py  phase1_local_bloch.py  phase2_ea_operator.py  phase3_envelope_solver.py  phase4_validation.py  phase5_meep_simulation.py
research/lattice_algorithms/: fill_area_with_lattice_points.ipynb
research/moire_cavity_exploration/: demo_local_cells.py  moire_cavity_pipeline.ipynb  moire_cavity_pipeline_refactored_v2.ipynb  pc_band_extrema_search.py  pc_band_surface_plot.py  seeds_stage1_monolayer.csv  stage1_monolayer_prefilter.py  stage1_prefilter.py  stage2.py  stage2_moire_visuals.py
research/moire_envelope/: IMPLEMENTATION.md  Makefile  README.md  REFINEMENT_ANALYSIS.md  compare_outputs.py  compare_outputs_v2.py  debug_y_flip.py  debug_y_flip2.py  test_rust_bindings.py
research/multi_moire_construction/: Stage1_LatticeParamInference.ipynb  test_ml_environment.py
research/photonic_bm_model/: dirac_point_confirmation.ipynb  dirac_point_search.ipynb  photonic_bm_implementation.ipynb
research/python-example/: lattice_visualization.ipynb  moire_band_diagram.ipynb  moire_basics.ipynb  photonic_band_diagram.ipynb
research/stacking_shift_map/: moire_shift_map_demo.ipynb
rust-core/: Cargo.toml  LICENSE-APACHE  README.md  debug_matrix.rs
rust-core/benches/: benchmark.toml  quick_test.rs  voronoi_benchmark.rs
rust-core/examples/: modular_lattices.rs
rust-core/src/: config.rs  interfaces.rs  lattice.rs  lib.rs  main.rs  moire_lattice.rs
rust-core/src/geometries/: _tests_geometry2d.rs  _tests_geometry2d_bounding_box.rs  _tests_geometry2d_transform.rs  geometry2d.rs  geometry2d_bounding_box.rs  geometry2d_transform.rs  mod.rs
rust-core/src/lattice/: _tests_lattice2d.rs  _tests_lattice3d.rs  _tests_lattice_polyhedron.rs  _tests_lattice_validations.rs  _tests_lattice_voronoi_cells.rs  _tests_polyhedron.rs  _tests_voronoi_cells.rs  base_matrix.rs  bravais_types.rs  construction.rs  coordination_numbers.rs  lattice2d.rs  lattice3d.rs  lattice_algorithms.rs  lattice_construction.rs  lattice_coordination_numbers.rs  lattice_like_2d.rs  lattice_types.rs  lattice_validations.rs  lattice_voronoi_cells.rs  mod.rs  polyhedron.rs  voronoi_cells.rs
rust-core/src/materials/: material.rs  mod.rs
rust-core/src/moire_lattice/: _tests_moire2d.rs  _tests_moire_builder.rs  _tests_moire_stacking_registries.rs  mod.rs  moire2d.rs  moire_builder.rs  moire_stacking_registries.rs  moire_validation_algorithms.rs
rust-core/src/symmetries/: high_symmetry_points.rs  mod.rs  point_groups.rs  symmetry_operations.rs  symmetry_point_groups.rs
rust-python/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  test_bindings.py
rust-python/python/moire_lattice_py/: __init__.py
rust-python/src/: base_matrix.rs  high_symmetry_points.rs  lattice2d.rs  lattice_types.rs  lib.rs  moire2d.rs  polyhedron.rs  utils.rs
rust-python/src/lattice/: bravais_types.rs  construction.rs  coordination_numbers.rs  lattice2d.rs  lattice3d.rs  lattice_bravais_types.rs  lattice_construction.rs  lattice_coordination_numbers.rs  lattice_polyhedron.rs  lattice_voronoi_cells.rs  mod.rs  polyhedron.rs  voronoi_cells.rs
rust-python/src/moire_lattice/: mod.rs  moire2d.rs  moire_builder.rs  moire_stacking_registries.rs  moire_validation_algorithms.rs
rust-python/src/symmetries/: high_symmetry_points.rs  mod.rs  symmetry_operations.rs
rust-wasm/: Cargo.toml  README.md
rust-wasm/src/: common.rs  config.rs  interfaces.rs  lattice.rs  lib.rs  moire_lattice.rs  symmetries.rs  tests.rs  utils.rs
rust-wasm/src/lattice/: base_matrix.rs  bravais_types.rs  construction.rs  lattice2d.rs  lattice3d.rs  lattice_algorithms.rs  lattice_construction.rs  lattice_like_2d.rs  lattice_types.rs  lattice_validations.rs  mod.rs  polyhedron.rs  voronoi_cells.rs
rust-wasm/src/moire_lattice/: mod.rs  moire2d.rs  moire_builder.rs  moire_stacking_registries.rs  moire_validation.rs
rust-wasm/src/symmetries/: high_symmetry_points.rs  mod.rs  symmetry_operations.rs
stage2_outputs/: seeds_stage2.csv
typst/: Makefile  README.md
typst/assets/: exampleBib.bib
typst/docs/msl-notes/: main.typ
typst/shared/: layout.typ  math-msl.typ
web/: .dockerignore  .env.production  .gitignore  .npmrc  Makefile  docker-compose.yml  empty-module.ts  globals.css  next.config.ts  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.js  theme.config.js  tsconfig.base.json  tsconfig.json  turbo.json
web/app/: global.css  layout.tsx  not-found.tsx
web/docker/: ml-research.Dockerfile  website.Dockerfile
web/examples/: README.md  square_lattice_tutorial.toml
web/public/: Moiré 2D - Basics.md  band_curves.json  band_diagram.json
web/scripts/: generate-runs-manifest.js
website/docs/: phase0-scoring-visualizer.md
(+423 files in other folders)
