[workspace]
members = [
    "rust-core",
    "rust-python", 
    "rust-wasm"
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Rene-Marcel Lehner <rene.lehner@tu-dortmund.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rnle/msl"

[workspace.dependencies]
# Core lattice library
moire-lattice = { path = "rust-core", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling  
anyhow = "1.0"
thiserror = "2.0"

# Linear algebra
ndarray = "0.16"
nalgebra = { version = "0.33", features = ["serde-serialize"] }

# Python bindings
pyo3 = { version = "0.25", features = ["extension-module"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

# Logging
log = "0.4"
