[package]
name = "moire-lattice"
version = "0.1.0"
edition = "2024"
authors = ["Rene-Marcel Lehner <rene.lehner@tu-dortmund.de>"]
description = "High-performance simulation suite for moire lattice calculations"
license = "MIT OR Apache-2.0"

[dependencies]
# Linear algebra and numerical computing
ndarray = "0.16"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
approx = "0.5"

# High-performance computing
rayon = "1.8"
num-complex = "0.4"
num-traits = "0.2"

# FFT and signal processing
rustfft = "6.1"

# Parallel computing and SIMD
wide = "0.7"

# Serialization and I/O
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdf5 = { version = "0.8", optional = true }

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Plotting and visualization (optional)
plotters = { version = "0.3", optional = true }

# Performance monitoring
criterion = { version = "0.6", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[features]
default = ["hdf5"]
plotting = ["plotters"]
benchmarks = ["criterion"]
hdf5 = ["dep:hdf5"]

# Uncomment when benchmark file exists
# [[bench]]
# name = "moire_bench"
# harness = false
# required-features = ["benchmarks"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"