[package]
name = "moire-lattice"
version = "0.1.1"
edition = "2024"
authors = ["Rene-Marcel Lehner <rene.lehner@tu-dortmund.de>"]
description = "High-performance lattice framework for photonic band structure calculations and moire physics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rnle/msl"
homepage = "https://github.com/rnle/msl"
documentation = "https://docs.rs/moire-lattice"
readme = "README.md"
keywords = ["lattice", "photonics", "moire", "crystallography", "physics"]
categories = ["science", "simulation", "mathematics"]
rust-version = "1.85"

[dependencies]
# Linear algebra and numerical computing
ndarray = "0.16"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
approx = "0.5"

# ── optional, *robust* 2-D Voronoi backend (Voronoice) ──
voronoice = { version = "0.2", optional = true }

# ── high-performance 3-D convex-hull engine ──
voro_rs = { version = "0.3", optional = true }

# High-performance computing
rayon = { version = "1.8", optional = true }
num-complex = "0.4"
num-traits = "0.2"

# FFT and signal processing
rustfft = "6.1"

# Parallel computing and SIMD
wide = "0.7"

# Serialization and I/O
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
hdf5 = { version = "0.8", optional = true }

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Plotting and visualization (optional)
plotters = { version = "0.3", optional = true }

# Performance monitoring
criterion = { version = "0.7", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[features]
default = ["std"]
std = []
# Optional features for specific use cases
plotting = ["plotters"]
benchmarks = ["criterion"]
hdf5 = ["dep:hdf5"]
ws3d_voro = ["voro_rs"]    # enables fast 3-D WS via Voro-RS
voronoi2d = ["voronoice"]  # enables 2-D Voronoi cells
parallel = ["rayon"]       # parallel computing features
json = ["serde_json"]      # JSON serialization support

# Features for photonic band structure calculations
photonic = ["std", "parallel"] # Core features needed for MPB-like calculations
mpb-compat = [
    "photonic",
    "hdf5",
    "json",
] # Full compatibility for MPB replacement

# Benchmark configurations
