[package]
name = "moire-lattice-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core lattice library
moire-lattice.workspace = true

# WASM bindings
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true

# Linear algebra
nalgebra.workspace = true

# Web APIs
web-sys = { workspace = true, features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
] }

# Serialization for JS data exchange
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"

# Error handling for WASM
console_error_panic_hook.workspace = true

# Logging
log.workspace = true
